# myproject-core

./: .gitignore  pyproject.toml
myproject/: plugin_manager.py
myproject/plugins/: plugin.py
