[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "Example of core package in python"
authors = ["Jean-Baptiste Poullet <jeanbaptistepoullet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
